任务需求.txt
任务需求：我想编写一个基于文件目录结构管理和合并pdf的工具，名称为pdf名册管理生成工具，其功能需求及工作流程如下：
1、windows兼容，开发语言自选，成品可离线运行，无需下载依赖，UI界面，框架式结构，窗口分辨率自适应，banner位置显示程序名称，banner下一行展示“选择工作目录”“导入标签”“保存标签”“开始合并”按钮，再下一行左右2栏，左侧为树形结构展示区，右侧为文件预览编辑区；
2、确定工作目录，用户点击“选择工作目录”按钮后，弹出系统自带的文件夹选择框，默认为程序目录下的work目录，用户也可自选，先列出work目录下的所有子目录，用户选择确定某个子目录为工作目录，后续操作均在选择的目录中进行；
3、用户选定工作目录后，程序自动扫描工作目录下所有子目录及文件，扫描深度为直至没有子目录；
4、程序在UI左侧预设区域展示工作目录扫描结果，以目录结构和文件名排序，文件夹和文件混排，点击相应节点可在查看、编辑对应文件，树形结构带全部展开、全部收起、节点展开、节点收起等右键菜单，并对应相应功能；
5、用户可在UI界面拖动目录及文件顺序，可增删改树形结构信息，文件夹内容随之改变，用户调整完成后的树结构即为最终合并pdf的标签；
6、用户点击“导出标签”按钮时，将现有目录文件树以pdf标签标准格式保存为xml，弹出文件保存位置选择窗口供用户选择，默认为程序output目录下；
7、用户点击“导入标签”按钮时，弹出文件选择窗口供用户选择历史xml标签文件，默认为程序output目录，用户选择xml文件后，文件和目录树替换为选中xml的树形展示，同时扫描工作目录内的目录和文件，比对xml节点与目录、文件的对应性，检查完成后弹出节点无对应文件的报告供用户后续进行调整；
8、用户调整完成树形标签和对应文件、目录后，点击“开始合并”按钮，程序按照树形结构的顺序合并各层子目录中的pdf文件，并将树形结构作为合并后的pdf标签，合并时展示进度条，合并完成后弹出保存窗口，供用户选择保存位置，默认为output目录。
9、注意事项：用户不必须导入标签和保存标签，扫描目录时仅关注目录和pdf文件，忽略其他文件。

先别着急打包，还需要调整：1、UI需要调整，banner太高，按钮上下方空白区域太多，树形结构和预览区域太小；2、预览区域只展示了pdf的基本信息，而没有展示其具体内容，也没有简单的编辑功能。请进行调整，完成后别着急打
包，运行程序给我看。


存在问题：1、UI大小仍然不合理，banner、按钮占据空间过大，banner高度应约占10%，按钮占5%，其余高度全部给树形展示和预览，水平布局中，树形展示应占三分之一、文件预览区域应占三分之二，能否更改高度占用计算方式或更改pyside的grid组件模式，另外作为框架结构，用户应可调框架结构占用区域并自动记录用户调整结果；2、pdf预览区域提示需要安装pypdfium2才能展示预览；3、点击开始合并按钮后，进度条弹窗无进度且无法关闭。

存在问题：1、扫描目录后创建树形结构时，当目录中既有目录又有文件时，文件名即使靠前也排在了文件夹之后，比如目录下有：“0-名册.pdf”文件、“1-机关部门以上领导”等目录，树形区域展示顺序为：
1-机关部门以上领导
...
0-名册.pdf
而我期望为：
0-名册.pdf
...
1-机关部门以上领导
2、现在UI布局比较合理了，但在pdf预览区，文件信息为多行展示，占用高度太大，而且没必要，需要取消展示，pdf默认展示预览图大小太小，且调整缩放比例时预览图大小并不会变化，最好是能用鼠标滚轮方式进行页面缩放调整。


存在问题：1、鼠标滚轮放大缩小预览图的方法应给用户在UI上进行说明，另外当图像放大超过150%时程序崩溃闪退了；2、树形结构鼠标双击事件报错：Traceback (most recent call last):
  File "D:\pdfmc\src\ui\tree_widget.py", line 213, in _on_item_double_clicked
    self.setItemExpanded(widget_item, not self.isExpanded(widget_item))
    ^^^^^^^^^^^^^^^^^^^^
AttributeError: 'TreeWidget' object has no attribute 'setItemExpanded'. Did you mean: 'itemExpanded'?

存在问题：1、预览图仅支持放大到150%，我期望能够放大到300%；2、树形结构有重命名功能，但重命名时提示：“文件名称由实际文件决定，不能直接重命名。
如需修改标签名称，请导出 XML 后编辑再导入。”，这个限制不符合我原本的设计，我期望是树形结构第一次由目录结构生成，但生成后应可以单独编辑，但节点仍对应相应目录和文件。

存在问题：现在能够编辑树形结构的书签名了，但是在合并时，依然使用的原始目录的结构书签，而不是我在ui界面编辑后的
新的任务需求：在程序UI上添加按钮“拆分pdf”，其对应功能为点击该按钮后，弹出文件选择窗口，由用户选择pdf，再次弹出文件夹选择窗口，由用户选择输出目录，将用户选定pdf按书签（如果有的话）拆分为目录结构和多个pdf单文件，目录结构和文件名与书签保持一致（注意处理不可作为文件名的字符），放置在用户选择的输出目录中，文件夹选择窗口和输出目录，默认为output。

存在问题：1、我在UI中进行了书签修改，比如：将03信息处修改为04信息处，但合并后的pdf中书签仍为03信息处；2、正在合并的进度条在合并文件已经保存后依然存在，且进度为0%，需要手工才能关闭；3、拆分pdf的功能不可用，点击拆分按钮选择文件和目录后，弹出了正在拆分进度窗口，一直显示0%。

存在问题：拆分pdf只生成了pdf，而没有生成文件目录，拆分的过程应当是：读取pdf的书签——判断节点是否对应pdf页面，判断原则是只有最底层的书签节点才对应页面，否则均为目录——建立目录和提取pdf页面到单独的pdf文件——检查拆分结果是否符合原始书签结构

我的想法是，拆分pdf的结果应当是合并pdf的逆过程，形成的结果应当是形成与书签结构对应的目录结构，叶子节点下无叶子节点的页面提取为单独的pdf，存放在相应目录结构下

 python D:\pdfmc\main.py

存在问题：1、拆分pdf后，生成的单个pdf有2个.pdf后缀；2、导入标签报错，提示：Traceback (most recent call last):
  File "D:\pdfmc\src\ui\main_window.py", line 327, in _on_import_xml
    tree_items = self.tree_manager.items_to_tree_items(items)
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
AttributeError: 'TreeManager' object has no attribute 'items_to_tree_items'

存在问题：1、点击打包后的程序按钮，未弹出文件选择框，我复制了具有子目录的work目录后可弹出qt对话框；2、运行源代码点击该按钮，也弹出了qt对话框，而不是系统原生对话框；3、打包后的程序中，点击树叶子节点时，pdf预览窗口显示：需要安装pypdfium2，是否没有打包这个依赖

现在可以正常弹出qt对话框了，需求：1、恢复windows原生对话框；2、PDF预览依然报错"需要安装pypdfium2"

现在已经恢复为 Windows 原生窗口了，但是点击树节点后，预览窗口依然提示需要安装pypdfium2

需要优化代码，要求扫描目录时支持中英文序号排序，比如：一、二、三...，a、b、c...，修改后别着急打包

继续优化代码：1、除了默认数字及中英文序号排序，程序应支持ini配置文件中规定的顺序排序，树形结构中不要显示文件pdf等后缀；2、拆分pdf时，应同时将pdf的书签xml导出，选择工作目录时，如果工作目录中有xml文件，优先加载该xml书签，而不展示目录扫描结果，并给用户提示。

程序报错：Traceback (most recent call last):
  File "D:\pdfmc\main.py", line 32, in <module>
    from src.ui.main_window import MainWindow
  File "D:\pdfmc\src\ui\main_window.py", line 308
    msg = f"在目录中发现书签文件：\n{xml_files[0].name}\n\n是否加载该书签？\n（选择"否"将扫描目录）"
                                                              ^
SyntaxError: invalid syntax
另外，我认为3种排序的优先级需要进行确认：1、xml文件；2、ini固定排序；3、文件扫描结果（支持中英文序号）

存在问题：我对pdf进行了拆分："D:\pdfmc\output\merged1.pdf"，输出到了：D:\pdfmc\dist\pdfmc\_internal\output，但是紧接着选择这个目录时，预览窗口提示：仅支持PDF预览，而拆分目录下是有pdf文件的，请查看这些目录和文件，修复预览问题，怀疑是预览区域加载pdf存在文件名判断问题

你可能误会了我的意思，我是说当我选择的工作目录包含xml时，程序询问我是否加载xml，我选择是，程序正确加载了xml树形结构，但节点验证报告提示所有的节点在工作目录中未找到对应的文件或目录，实际上工作目录是有相应的目录和文件的，说明节点验证逻辑有问题，需要检查节点验证是否也忽略了文件完整路径

存在问题：1、节点验证时当节点为中文序号时，依然提示找不到文件，怀疑检查时没有拼接.pdf后缀；2、修改节点后点击开始合并按钮，提示没有找到可合并的文件，说明程序对于节点列表和文件、目录列表的检查依然有问题。

好的，暂不考虑适配win7的问题，程序需要添加功能：1、文件及目录树中缺少添加和删除书签的功能，需要进行添加，当开始合并时，节点即使没有对应的pdf也进行合并；2、当我右键选择添加pdf时，提示需要重新扫描目录或编辑xml，我期望选择添加pdf时能够弹出文件选择窗口，将选择的pdf放置在书签对应目录下，同时在树中添加书签。

存在问题：开始合并时，我在树中新建的书签（即没有对应的pdf文件），合并后的pdf文件中没有使用空白页面占位，合并后的pdf中这个新建的空书签也消失了。

我添加书签时是情况B——书签作为同级兄弟添加，在程序UI中能够看到新添加的书签，但导出后的pdf文件唯独没有这个新增加的书签，更没有占位空白页面，经测试，在添加新的书签后，如果能在对应位置添加pdf，则这个书签和页面能正常出现在合并后的pdf中。
，然后我们继续完善功能：我们之前设定了ini方式排序，但在打包后我没看到这个ini的作用，我希望添加“排序管理”按钮，点击后能用系统记事本打开这个ini进行编辑。
我还需要在程序UI中添加作者信息及版本号，作者：李中杰，版本：1.5，日期：2026.4.3


存在问题：现在合并的pdf中，所有页面均为空白页面了！

依然合并出的页面全部为空白页面，当我点击合并按钮时，程序弹出了无对应页面的书签节点列表，询问是否使用空白页面填充，我选择是后，生成的合并pdf全部为空白页面

请先查看开发日志和历史会话，本项目在合并pdf时仍生成全部为空白页面，需要检查合并过程，经我检查，程序在合并之前确实检查出了书签无对应文件的列表，询问是否使用空白页面代替，用户选择是后，确实在空白书签对应位置生成了空白的pdf，但在合并完成后，将已经存在的pdf页面也替换成了空白的pdf

之前版本的合并功能是正常的，添加空白标签填充空白pdf功能后才出现了合并页面全部为空白的情况，我认为程序的合并流程应当是：根据UI中的树结构生成拟合并pdf的书签——比对书签与对应pdf——形成缺失页面报告并询问用户——用户同意后生成空白页面填充对应书签位置——遍历所有树作为书签，遍历所有文件夹及子目录的pdf，进行pdf合并

经我测试，打包后的程序仍出现了合并全部空白页面的问题，并且打包后的程序合并出的pdf书签页面均加上了方括号“[]”，而源程序没有出现这样的问题

还是老问题，打包后的程序合并的pdf全是空页面，书签加了方括


我发现了问题，源程序合并pdf时也全部是空页面，书签也都加了方括号

很明显程序跳过了文件是否存在的判断，把所有节点都当作了虚拟节点，从空白页面进行了合并

还没好啊，现在程序添加书签后使用空白页面占位的功能失效了，我加载了目录和xml，然后在树中添加了新的书签，然后点击合并，程序并没有提示我缺失的书签页面，合并后也没有看到新添加的书签